# VKDemo

./: gradle.properties  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/mediatek/vkdemo/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  DemoRegistry.cpp  DemoRegistry.hpp  HelloTriangle1.hpp  HelloTriangle2.hpp  Renderer.cpp  demo.hpp  main.cpp
app/src/main/cpp/samples/GLES/: ClearGL.cpp  ClearGL.hpp  RegisterGlesSamples.cpp
app/src/main/java/com/mediatek/vkdemo/: MainActivity.kt  MenuActivity.kt
app/src/main/res/layout/: activity_menu.xml
app/src/main/res/menu/: menu_main.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/test/java/com/mediatek/vkdemo/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
